src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  /* Custom */
  --dark-background0: #22252a;
  --dark-background1: #171D25;
  --dark-background2: #0D1117;
  --dark-primary: #D8D4CE;
  --dark-h: #E0DCD7;
  --yellow: #FFBD00;
  --gray: #8B8E92;

  --ifm-color-primary: var(--yellow);
  --ifm-color-primary-dark: var(--yellow);
  --ifm-color-primary-darker: var(--yellow);
  --ifm-color-primary-darkest: var(--yellow);
  --ifm-color-primary-light: var(--yellow);
  --ifm-color-primary-lighter: var(--yellow);
  --ifm-color-primary-lightest: var(--yellow);
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.main-wrapper {
  background: var(--dark-background1);
}

.footer {
  background: url(/img/4ga_footer.png) center center no-repeat;
  background-size: contain;
  min-height: 388.25px;
  background-color: var(--dark-background0);
  display: flex;
  align-items: end;
}

.footer__col {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 1rem;
}

.footer a {
  text-decoration: none;
}

.footer__title {
  color: var(--dark-h);
}

.footer__links {
  max-width: 1200px;
  margin: 0 auto 20px auto;
}

.footer__link-item {
  color: var(--dark-primary);
}

.footer__bottom {
  max-width: 1200px;
  margin: 0 auto;
  padding: 25px 0 0 0;
  font-size: 14px;
  border-top: 1px solid rgba(256, 256, 256, .1);
  font-family: Verdana, sans-serif;
  color: var(--dark-primary);
}

.footer-custom-logo {
  width: 400px;
}

.header-github svg {
  width: 30px;
  height: 30px;
}

.header-github {
  display: flex;
  align-items: center;
  color: var(--dark-primary);
  path {
      fill: var(--gray);
  }
  white-space: nowrap;
}

.header-github:hover, .header-github:focus, .header-github:active {
  color: var(--yellow);

  path {
      fill: var(--yellow);
  }
}

.header-github p {
  margin: 0 0 0 0.5rem;
}

.navbar {
  background: var(--dark-background0);
}

.hero--primary {
  background: var(--dark-background2);
}

.hero__title {
  color: var(--dark-h);
}

.hero__subtitle {
  color: var(--dark-primary);
}

.button {
  background: var(--yellow);
  border-color: var(--yellow);
}

.container {
  max-width: initial !important;
}

.col--3 { 
  max-width: 15% !important;
  flex: 1 1 0;
 }

 .docMainContainer_TBSr .docItemCol_VOVn {
  flex: 1 1 0;
  max-width: 85% !important;
  margin: 0 1rem 0 2rem;
}

